# post-process-monopole

./: .gitattributes  .gitignore  README.md  __init__.py  monopole.ipynb  monopoleFlow.ipynb  monopoleFlowSchemes.ipynb  pyproject.toml
baseCode/: Cyl_wave.m  Cyl_wave_ERROS_Akhnoukh.m  Cyl_wave_ERROS_DISPERSAO.m  Cyl_wave_ERROS_DISPERSAO_1.m  Cyl_wave_ERROS_DISSIPACAO.m  Cyl_wave_FWH.m  Cyl_wave_RMS.m  Cyl_wave_flowRate.m  monopole_0.5.spydata  monopole_new.py
data/pressureData/back20/: FWH_surfacePressure.txt
data/pressureData/monopole2/: FWH_surfacePressure.txt
data/pressureData/monopole3/: FWH_surfacePressure.txt
data/probes/0/: U.txt
data/probes/back20/: p.txt
data/probes/back40/: p.txt
data/probes/backward20/: p.txt
data/probes/backward40/: p.txt
data/probes/monopole2/: p.txt
data/probes/monopole3/: p.txt
foamCases/: readme  readmeSchemes.md
foamCases/newMesh0/teste6/: Allrun.sh
foamCases/teste1/: Allrun.sh
foamCases/teste1/0.35/: T  T_0  U  p  p_0  rho  rho_0
foamCases/teste1/0.45/: T  T_0  U  p  p_0  rho  rho_0
foamCases/teste1/system/: Allrun.sh  controlDict  readme
foamCases/teste2/0.35/: U_0  rho
foamCases/teste2/system/: readme
foamCases/teste5/: Allrun.sh
mesh/geo/: teste.geo  teste_zona.geo
observers/: microphones.txt  microphonesTimeS.txt  probes.txt  probesTime  probesTime.txt  probesTimeFlow  templateProbe.txt
scripts/: cyl_wave.py  cyl_wave_FWH.py  monopole.ipynb  monopole.py  monopoleFlow.ipynb  monopoleFlow.py  observers.py  test.py  wave.py
src/: datadrive.py  monopole.py  observers.py  wave.py
(+61 files in other folders)
