[tool.poetry]
name = "post-process-monopole"
version = "0.1.0"
description = ""
authors = ["Widmark Kauê <widmarkkaue.s.c@gmail.com>"]
readme = "README.md"
packages = [{include = "post_process_monopole"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
matplotlib = "^3.6.0"
scipy = "^1.9.1"
jupyter = "^1.0.0"
sympy = "^1.11.1"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
