[tool.poetry]
name = "post-process-monopole"
version = "0.1.0"
description = ""
authors = ["Widmark-Kaue <widmarkkaue.s.c@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
jupyter = "^1.0.0"
ipynb = "^0.5.1"
pathlib = "^1.0.1"
sympy = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
